--- a/app.json
+++ b/app.json
@@ -2,12 +2,23 @@
   "expo": {
     "name": "BookTrackingApp",
     "slug": "BookTrackingApp",
+    "plugins": [
+      [
+        "react-native-fbsdk-next",
+        {
+          "appID": "280234084356777",
+          "clientToken": "07372438a1d3fa8529513ebdd1a25466",
+          "displayName": "RN SDK Demo"
+        }
+      ],
+      "@react-native-google-signin/google-signin"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./app/assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./app/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -15,16 +26,24 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./app/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.spidey.bta",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./app/assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "36c0d5a6-ecea-4d6d-ad09-e6777716cd2b"
+      }
     }
   }
 }
