--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@expo/config-plugins": "^6.0.1",
     "@expo/webpack-config": "^18.0.1",
     "@mui/material": "^5.12.2",
     "@react-native-firebase/app": "^17.5.0",
+    "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-native-twitter-signin/twitter-signin": "^1.2.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.10",
+    "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -34,6 +38,7 @@
     "react-native": "0.71.8",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.3",
+    "react-native-fbsdk-next": "^11.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
